--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          npm i --legacy-peer-deps
+          npm install --legacy-peer-deps
 
       - name: Build React App
         run: |
